--- a/src/app/config.json
+++ b/src/app/config.json
@@ -1,12 +1,7 @@
 {
   "shop": {
-    "name": "枫叶日本料理",
-    "icon": null,
-    "payment": [
-      "微信支付",
-      "支付寶",
-      "Apple Pay"
-    ]
+    "name": "過癮菜行",
+    "icon": null
   },
   "localStorageName": "vue-order-ui"
 }
