--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "version": "1.0.1",
   "type": "module",
   "scripts": {
-    "dev": "fastjs dev",
-    "build": "fastjs build"
+    "dev": "vite dev",
+    "build": "vite build"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.15",
-    "fastjs-cli": "^2.4.8",
-    "fastjs-next": "^1.0.14",
+    "jsfast": "1.0.0-beta.20",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "vite-require": "^0.2.3",
@@ -21,6 +20,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
-    "vite": "^3.2.3"
+    "vite": "^3.2.11"
   }
 }
