--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@line/liff": "^2.24.0",
+    "@vitejs/plugin-legacy": "^4.1.1",
     "ant-design-vue": "^3.2.15",
     "jsfast": "1.0.0-beta.20",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "sql.js": "^1.11.0",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-require": "^0.2.3",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
@@ -22,5 +25,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "vite": "^3.2.11"
-  }
+  },
+  "main": "./public/"
 }
