--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@line/liff": "^2.24.0",
     "@vitejs/plugin-legacy": "^4.1.1",
     "ant-design-vue": "^3.2.15",
+    "exceljs": "^4.4.0",
     "jsfast": "1.0.0-beta.20",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
