--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "@line/liff": "^2.24.0",
     "ant-design-vue": "^3.2.15",
+    "dayjs": "^1.11.13",
     "jsfast": "1.0.0-beta.20",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
